--- a/React and Spring/rest-web-services/src/main/resources/application.properties
+++ b/React and Spring/rest-web-services/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.security.users.name=in28minutes
-spring.security.user.password=dummy
+#spring.security.users.name=in28minutes
+#spring.security.user.password=dummy
